Add round and diagonal brush

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <svg style="visibility:hidden;width:0;height:0;">
+      <defs>
+        <!--SVG filter to remove alpha-->
+        <filter id="no-anti-aliasing">
+          <feComponentTransfer>
+            <feFuncA type="discrete" tableValues="0,1"></feFuncA>
+          </feComponentTransfer>
+        </filter>
+      </defs>
+    </svg>
   </body>
 </html>
