Add canvasConsole to aid in debugging canvas compositing operations

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     content="A simple PWA for drawing ilustrations with multilayer support"
   />
   <title>Scribbles</title>
+  <style>
+  </style>
 </head>
 
 <body>
+  <div id="canvas-console" style="position: absolute; z-index: 20;"></div>
   <div id="root"></div>
   <svg style="visibility:hidden;width:0;height:0;">
     <defs>
